--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -77,7 +77,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/forgot_password"
-        android:textColor="?android:attr/colorAccent"
+        android:textColor="@color/design_default_color_primary_variant"
         android:layout_marginTop="16dp"
         android:layout_marginBottom="32dp"
         android:clickable="true"
@@ -93,7 +93,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/register_now"
-        android:textColor="?android:attr/colorAccent"
+        android:textColor="@color/colorPrimaryDark"
         android:layout_marginTop="16dp"
         app:layout_constraintTop_toBottomOf="@id/forgotPassword"
         app:layout_constraintStart_toStartOf="parent"
